# laser_projector

./: .gitignore  1.ild  100.ild  CompileSvg.txt  README.md  README.old.md  TODO  anim.blend  clock.csv  config.json  dnsmasq.conf  etc-dnsmasq.conf  gyrec.ild  hostapd.conf  index.js  install.sh  konzultace.md  kosik.csv  laser_projector-web-ui.js  lasershow  notes.ipynb  notes_hw.txt  notes_sw.txt  package-lock.json  package.json  parts.csv  pm2LogsToTty1.service  script.js  sources.txt  square_white.csv  style.css  vydaje.ipynb  wifi_manager.js
UI/: CMakeCache.txt  CMakeLists.txt  Makefile  UI  UItest  cmake_install.cmake  config.hpp  encoder.cpp  encoder.hpp  main  main.cpp  menu.hpp  my_zmq_helper.cpp  my_zmq_helper.hpp  soft_i2c.c  soft_i2c.h  soft_lcd.c  soft_lcd.h
UItest/: Makefile  UItest  encoder.c  encoder.h  encoder.hpp  main.cpp  menu.h  menu.hpp
battery-read/: CMakeLists.txt  main.cpp
case-3D/: case-3D-notes.md
case-3D/laser_projector_3d_files/: Knob_6.3.stl  bat_cover_hold (1).3mf  bat_cover_hold.3mf  camera_hold.3mf  encoder_hold.3mf  low_laser_hold.3mf  newcase_laser_projector v55_19x_bottom_hold_body.3mf  newcase_laser_projector v55_bat_cover.3mf  newcase_laser_projector v55_bat_cover1.3mf  newcase_laser_projector v55_batprotec_hold.3mf  newcase_laser_projector v55_bottom.3mf  newcase_laser_projector v55_camera_cover.3mf  newcase_laser_projector v55_camera_hold.3mf  newcase_laser_projector v55_fan_cover.3mf  newcase_laser_projector v55_galvo_cover.3mf  newcase_laser_projector v55_layer0-glueon.3mf  newcase_laser_projector v55_layer0.3mf  newcase_laser_projector v55_layer1.3mf  newcase_laser_projector v55_layer2.3mf  newcase_laser_projector v55_layer3.3mf  newcase_laser_projector v55_pot_cover.3mf  newcase_laser_projector v55_side0.3mf  newcase_laser_projector v55_side1.3mf  newcase_laser_projector v55_side2.3mf  newcase_laser_projector v55_side3.3mf  newcase_laser_projector v55_top.3mf
config_templates/: dhcpcd.conf  pm2LogsToTty1.service
discord_bot/: config.json  deploy-commands.js  deploy_commands.js  discord_bot.js  index.js  package-lock.json  package.json  setting_names.json  zmq_helper.js
discord_bot/commands/utility/: project.js  project.jsasdad  setting.js  stop.js  upload.js.no
ild/: 100.ild  8clock.ild  ahoj.ild  birb.ild  blue.ild  cheapclock.ild  cikre.ild  clock.ild  colors.ild  fourclock.ild  generated.ild  gyrec.ild  idk.ild  laser-projector.ild  ls_logo.ild  newclock.ild  newsoc.ild  randomshapes.ild  setting.ild  soc.ild  square_white.ild  v_QuadronSL_LASER_PROJECTOR__________________________githubcomphuid_050505_bbbbbb_cccccc.ild  v_ResamitzSL_LASER_PROJECTOR__________________________githubcomphuid_050505_bbbbbb_cccccc.ild
ilda-gen/: FormatData.h  ildaWriter.h  main  main.cpp
ilda-gen/font/: asteroids_font.c  asteroids_font.h  example.c
lg_pwm_test/: CMakeCache.txt  CMakeLists.txt  main.cpp  test
pcb/: rpi laser projector.fig
pcb/kicad/: _autosave-pcb.sch  fp-info-cache  fp-lib-table  pcb-bottom.pos  pcb-cache.lib  pcb-top.pos  pcb.csv  pcb.kicad_pcb  pcb.kicad_pcb-bak  pcb.kicad_prl  pcb.kicad_pro  pcb.kicad_sch  pcb.round-tracks-config  pcb.sch  pcb.sch-bak  pcb.xml  sym-lib-table
pcb/kicad/gerber/: gerber.rar  pcb-B_Cu.gbr  pcb-B_Mask.gbr  pcb-B_Paste.gbr  pcb-B_Silkscreen.gbr  pcb-Edge_Cuts.gbr  pcb-F_Cu.gbr  pcb-F_Mask.gbr  pcb-F_Paste.gbr  pcb-F_Silkscreen.gbr  pcb-drl_map.dxf  pcb-job.gbrjob  pcb.drl
pcb/kicad/laser_projector-(mcp4822+rpi).pretty/: mcp4822.kicad_mod  rpi_gpio.kicad_mod
rpi-lasershow/: .mcp4822.c.swp  ABE_ADCDACPi.h  CMakeCache.txt  CMakeLists.txt  ColorPalette.h  FormatData.h  Frame.cpp  Frame.h  FrameData.cpp  FrameData.h  IldaReader.cpp  IldaReader.h  Makefile  Points.h  cmake_install.cmake  colorPalette.hpp  command.cpp  command.hpp  lasershow.cfg  lasershow.cpp  lasershow.hpp  main.cpp  mcp4822.c  mcp4822.h  my_helper.cpp  my_helper.hpp  my_zmq_helper.cpp  my_zmq_helper.hpp  newtest  test  test.c
rpi-lasershow-master/: lasershow.cpp
tools/: svg2ild.py
web_ui/: ilda_format_data.json  index.html  package-lock.json  package.json  script.js  server.js  style.css
wifi_manager/: package-lock.json  package.json  wifiON.js  wifi_manager.js  wifi_setting.json
zmq_broadcast/: CMakeLists.txt  c.cpp  noblock_c.cpp  s.cpp
